--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="page1">
             <div id="nav">
                 <div class="right">
-                    <img src="images-removebg-preview.png" alt="">
+                    <img src="r.png" alt="">
                 </div>
                 <div class="center">
                     <a href="#">home</a>
@@ -35,12 +35,26 @@
                     <button> start now</button>
                 </div>
                 <div class="two">
-                    <img src="https://media.istockphoto.com/id/1725691812/photo/portrait-smile-and-kid-pointing-to-palm-in-studio-isolated-on-a-white-background-space-face.webp?a=1&b=1&s=612x612&w=0&k=20&c=2Bf0ka1zClJkttxgJ7PbIIcw9RoABeXdM6Z75Xp4Um0="
+                    <img src="h.png"
                         alt="">
                 </div>
             </div>
         </div>
     </div>
+
+
+    <div class="image-gallery">
+        <div class="gallery-container">
+            <img src="image1.jpg" alt="Image 1">
+            <img src="image2.jpg" alt="Image 2">
+            <img src="image3.jpg" alt="Image 3">
+            <img src="image4.jpg" alt="Image 4">
+            <img src="image5.jpg" alt="Image 5">
+        </div>
+    </div>
+
+
+    
 </body>
 
 </html>
